[package]
name = "phase21"
version = "0.3.2"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
documentation = "https://docs.rs/phase21"
homepage = "https://github.com/filecoin-project/phase2"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/phase2"

[dependencies]
rand = "0.4"
byteorder = "1"
num_cpus = "1"
crossbeam = "0.7"
ff = "0.4.0"
blake2b_simd = "0.5.8"
bellperson = "0.3"
paired = "0.15"

[features]
default = []
gpu = ["bellperson/gpu"]
