[package]
name = "phase21"
version = "0.7.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
documentation = "https://docs.rs/phase21"
homepage = "https://github.com/filecoin-project/phase2"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/phase2"
edition = "2018"

[dependencies]
rand = "0.7"
byteorder = "1"
num_cpus = "1"
crossbeam = "0.7"
ff = { version = "0.2.1", package = "fff" }
blake2b_simd = "0.5.8"
bellperson = "0.9.0"
paired = "0.20.0"
groupy = "0.3.0"
rand_chacha = "0.2.1"
rayon = "1.2.1"
log = "0.4.7"

[features]
default = []
gpu = ["bellperson/gpu"]
