[package]
name = "phase2"
version = "0.3.0"
edition = "2021"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
documentation = "https://docs.rs/phase2"
homepage = "https://github.com/ebfull/phase2"
license = "MIT/Apache-2.0"
repository = "https://github.com/ebfull/phase2"

[dependencies]
pairing = "0.23.0"
rand = "0.8.5"
bellman = "0.14.0"
bls12_381 = "0.8.0"
ff = { version = "0.13" }
group = "0.13.0"
rand_chacha = "0.3.1"
byteorder = "1"
num_cpus = "1"
crossbeam = "0.3"
blake2-rfc = "0.2"
